Icon and splashscreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,26 @@
         android:label="Fantom"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.FireAlarmSystem"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.FireAlarmSystem.NoActionBar"/>
+            android:theme="@style/Theme.FireAlarmSystem.NoActionBar" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"
-            android:theme="@style/Theme.MaterialComponents.DayNight">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <activity
+            android:name=".SplashScreen"
+        android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.DayNight" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+</application>
 
-</manifest>
+    </manifest>
