Splah screen, Login screen redefined

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.FireAlarmSystem.NoActionBar" />
+            android:theme="@style/Theme.MainActivity.Light.NoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:exported="false"
